# homelab-container-seed

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
src/seeder/: main.py
test/fixtures/global/seed-global-hello/: Dockerfile
test/fixtures/global/seed-plant-only/: plant_seed.py
test/fixtures/test-instance/seed-instance-hello/: Dockerfile
