[project]
name = "homelab-container-seed"
version = "0.1.0"
description = "Seeds a Docker instance with local images"
requires-python = ">=3.12"

[project.scripts]
seeder = "seeder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seeder"]
